[project]
name = "telegram-expense-tracker"
version = "0.1.0"
description = "Production-ready FastAPI backend for tracking expenses from Telegram messages."
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.4.0",
    "fastapi>=0.115.0",
    "google-auth>=2.35.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
